cpp/ellens-alien-game/test_errors.txt
Why insist teleport() and hit() return a value if you're going to ignore them?


[ 33%] Building CXX object CMakeFiles/ellens-alien-game.dir/ellens_alien_game_test.cpp.o
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp: In function ‘void ____C_A_T_C_H____T_E_S_T____8()’:
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:40:14: error: ignoring return value of ‘bool targets::Alien::hit()’, declared with attribute ‘nodiscard’ [-Werror=unused-result]
   40 |     alien.hit();
      |     ~~~~~~~~~^~
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:1:
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game.cpp:20:32: note: declared here
   20 |             [[nodiscard]] bool hit() {
      |                                ^~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:42:14: error: ignoring return value of ‘bool targets::Alien::hit()’, declared with attribute ‘nodiscard’ [-Werror=unused-result]
   42 |     alien.hit();
      |     ~~~~~~~~~^~
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:1:
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game.cpp:20:32: note: declared here
   20 |             [[nodiscard]] bool hit() {
      |                                ^~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:44:14: error: ignoring return value of ‘bool targets::Alien::hit()’, declared with attribute ‘nodiscard’ [-Werror=unused-result]
   44 |     alien.hit();
      |     ~~~~~~~~~^~
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:1:
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game.cpp:20:32: note: declared here
   20 |             [[nodiscard]] bool hit() {
      |                                ^~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:46:14: error: ignoring return value of ‘bool targets::Alien::hit()’, declared with attribute ‘nodiscard’ [-Werror=unused-result]
   46 |     alien.hit();
      |     ~~~~~~~~~^~
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:1:
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game.cpp:20:32: note: declared here
   20 |             [[nodiscard]] bool hit() {
      |                                ^~~
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp: In function ‘void ____C_A_T_C_H____T_E_S_T____12()’:
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:59:19: error: ignoring return value of ‘bool targets::Alien::teleport(int, int)’, declared with attribute ‘nodiscard’ [-Werror=unused-result]
   59 |     alien.teleport(99, 8);
      |     ~~~~~~~~~~~~~~^~~~~~~
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game_test.cpp:1:
/home/vpayno/git_vpayno/exercism-workspace/cpp/ellens-alien-game/ellens_alien_game.cpp:29:32: note: declared here
   29 |             [[nodiscard]] bool teleport(int new_x, int new_y) {
      |                                ^~~~~~~~
